2020/09/02 notice, qna リスト　完了

--- a/music/WebContent/WEB-INF/urlMapping.properties
+++ b/music/WebContent/WEB-INF/urlMapping.properties
@@ -13,10 +13,11 @@
 #/introduction/direction.do=kr.farmstory2.service.introduction.DirectionService
 
 # About Board
-#/board/list.do=kr.galaxymusic.service.board.ListService
-#/board/modify.do=kr.galaxymusic.service.board.ModifyService
+/board/notice-list.do=kr.galaxymusic.service.board.NoticeListService
+/board/qna-list.do=kr.galaxymusic.service.board.QnaListService
 #/board/view.do=kr.galaxymusic.service.board.ViewService
-#/board/write.do=kr.galaxymusic.service.board.WriteService
+/board/notice-write.do=kr.galaxymusic.service.board.NoticeWriteService
+/board/qna-write.do=kr.galaxymusic.service.board.QnaWriteService
 #/board/comment.do=kr.galaxymusic.service.board.CommentService
 #/board/deleteComment.do=kr.galaxymusic.service.board.DeleteCommentService
 #/board/commentModify.do=kr.galaxymusic.service.board.CommentModifyService
