2020/09/03 qna, notice 리스트 완료 qna 비번 확인 비완성

--- a/music/.settings/org.eclipse.core.resources.prefs
+++ b/music/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//WebContent/board/css/board_style.css=UTF-8
 encoding//WebContent/board/notice-view.jsp=UTF-8
+encoding//WebContent/board/qna-board-pass.jsp=UTF-8
 encoding//WebContent/board/qna-view.jsp=UTF-8
 encoding//WebContent/board/qna-write.jsp=UTF-8
 encoding//WebContent/board/qna.jsp=UTF-8
