--- a/music/WebContent/WEB-INF/urlMapping.properties
+++ b/music/WebContent/WEB-INF/urlMapping.properties
@@ -15,7 +15,8 @@
 # About Board
 /board/notice-list.do=kr.galaxymusic.service.board.NoticeListService
 /board/qna-list.do=kr.galaxymusic.service.board.QnaListService
-#/board/view.do=kr.galaxymusic.service.board.ViewService
+/board/notice-view.do=kr.galaxymusic.service.board.NoticeViewService
+/board/qna-view.do=kr.galaxymusic.service.board.QnaViewService
 /board/notice-write.do=kr.galaxymusic.service.board.NoticeWriteService
 /board/qna-write.do=kr.galaxymusic.service.board.QnaWriteService
 #/board/comment.do=kr.galaxymusic.service.board.CommentService
