--- a/music/WebContent/WEB-INF/urlMapping.properties
+++ b/music/WebContent/WEB-INF/urlMapping.properties
@@ -19,6 +19,7 @@
 /board/qna-view.do=kr.galaxymusic.service.board.QnaViewService
 /board/notice-write.do=kr.galaxymusic.service.board.NoticeWriteService
 /board/qna-write.do=kr.galaxymusic.service.board.QnaWriteService
+/board/notice-search.do=kr.galaxymusic.service.board.NoticeSearchService
 #/board/comment.do=kr.galaxymusic.service.board.CommentService
 #/board/deleteComment.do=kr.galaxymusic.service.board.DeleteCommentService
 #/board/commentModify.do=kr.galaxymusic.service.board.CommentModifyService
