2020/09/08 検索機能完了

--- a/music/WebContent/WEB-INF/urlMapping.properties
+++ b/music/WebContent/WEB-INF/urlMapping.properties
@@ -20,6 +20,7 @@
 /board/notice-write.do=kr.galaxymusic.service.board.NoticeWriteService
 /board/qna-write.do=kr.galaxymusic.service.board.QnaWriteService
 /board/notice-search.do=kr.galaxymusic.service.board.NoticeSearchService
+/board/qna-search.do=kr.galaxymusic.service.board.QnaSearchService
 #/board/comment.do=kr.galaxymusic.service.board.CommentService
 #/board/deleteComment.do=kr.galaxymusic.service.board.DeleteCommentService
 #/board/commentModify.do=kr.galaxymusic.service.board.CommentModifyService
