--- a/music/WebContent/WEB-INF/urlMapping.properties
+++ b/music/WebContent/WEB-INF/urlMapping.properties
@@ -8,9 +8,8 @@
 /user/register.do=kr.galaxymusic.service.user.RegisterService
 /user/register-complete.do=kr.galaxymusic.service.user.RegisterCompleteService
 
-#Introduction
-#/introduction/greeting.do=kr.farmstory2.service.introduction.GreetingService
-#/introduction/direction.do=kr.farmstory2.service.introduction.DirectionService
+# About Admin
+/admin/index.do=kr.galaxymusic.service.admin.AdminIndexService
 
 # About Board
 /board/notice-list.do=kr.galaxymusic.service.board.NoticeListService
@@ -21,6 +20,8 @@
 /board/qna-write.do=kr.galaxymusic.service.board.QnaWriteService
 /board/notice-search.do=kr.galaxymusic.service.board.NoticeSearchService
 /board/qna-search.do=kr.galaxymusic.service.board.QnaSearchService
+/board/goods-list.do=kr.galaxymusic.service.board.GoodsListService
+/board/goods-view.do=kr.galaxymusic.service.board.GoodsViewService
 #/board/comment.do=kr.galaxymusic.service.board.CommentService
 #/board/deleteComment.do=kr.galaxymusic.service.board.DeleteCommentService
 #/board/commentModify.do=kr.galaxymusic.service.board.CommentModifyService
