2020/09/23 비밀글 보기 미완성

--- a/music/WebContent/WEB-INF/urlMapping.properties
+++ b/music/WebContent/WEB-INF/urlMapping.properties
@@ -7,6 +7,13 @@
 /user/terms.do=kr.galaxymusic.service.user.TermsService
 /user/register.do=kr.galaxymusic.service.user.RegisterService
 /user/register-complete.do=kr.galaxymusic.service.user.RegisterCompleteService
+/user/search-id.do=kr.galaxymusic.service.user.SearchIdService
+/user/search-password.do=kr.galaxymusic.service.user.SearchPasswordService
+/user/search-id-result.do=kr.galaxymusic.service.user.SearchIdResultService
+/user/search-password-result.do=kr.galaxymusic.service.user.SearchPasswordResultService
+/user/checkUid.do=kr.galaxymusic.service.user.CheckUidService
+/user/checkPass.do=kr.galaxymusic.service.user.CheckPassService
+/user/checkEmail.do=kr.galaxymusic.service.user.CheckEmailService
 
 # About Admin
 /admin/index.do=kr.galaxymusic.service.admin.AdminIndexService
@@ -22,6 +29,9 @@
 /board/qna-search.do=kr.galaxymusic.service.board.QnaSearchService
 /board/goods-list.do=kr.galaxymusic.service.board.GoodsListService
 /board/goods-view.do=kr.galaxymusic.service.board.GoodsViewService
+/board/notice-delete.do=kr.galaxymusic.service.board.NoticeDeleteService
+/board/qna-delete.do=kr.galaxymusic.service.board.QnaDeleteService
+/board/qna-board-pass.do=kr.galaxymusic.service.board.QnaBoardPassService
 #/board/comment.do=kr.galaxymusic.service.board.CommentService
 #/board/deleteComment.do=kr.galaxymusic.service.board.DeleteCommentService
 #/board/commentModify.do=kr.galaxymusic.service.board.CommentModifyService
